--- a/inventory/templates/inventory/bookkeeping.html
+++ b/inventory/templates/inventory/bookkeeping.html
@@ -7,6 +7,8 @@
 
 	<div class="uk-width-expand uk-padding-remove">
 		<h1>Total profit:     {{ total_profit }}</h1>
+		<h3>Total revenue:     {{ total_revenue }}</h3>
+		<h3>Total expenses:     {{ total_expenses }}</h3>
 	</div>
 
 	<div class="uk-width-1-6@m uk-invisible"></div>
