--- a/inventory/templates/inventory/menu.html
+++ b/inventory/templates/inventory/menu.html
@@ -19,12 +19,12 @@
 				{% for item in object_list %}
 				<tr>
 					<td><h3>{{ item.title }}</h3></td>
-					<td><a class="uk-button uk-button-default uk-button-small" href="#">Consist</a></td>
+					<td><button class="uk-button uk-button-default uk-button-small" href="#" disabled>Consist</button></td>
 					<td>{{ item.price }}</td>
 					<td>
 						<div class="uk-button-group">
-							<a class="uk-button uk-button-default uk-button-small" href="#">Edit</a>
-							<a class="uk-button uk-button-default uk-button-small" href="#">Delete</a>
+							<button class="uk-button uk-button-default uk-button-small" href="#" disabled>Edit</button>
+							<button class="uk-button uk-button-default uk-button-small" href="#" disabled>Delete</button>
 						</div>
 					</td>
 				</tr>
