--- a/inventory/templates/inventory/update_ingredient.html
+++ b/inventory/templates/inventory/update_ingredient.html
@@ -9,10 +9,10 @@
 		<form method="POST">
 			{% csrf_token %}
 			<fieldset class="uk-fieldset">
-				<legend class="uk-legend uk-text-bold">Create new ingredient</legend>
+				<legend class="uk-legend uk-text-bold">Update ingredient</legend>
 				{{ form.as_p }}
 			</fieldset>
-			<button class="uk-button uk-button-primary" type="submit">Add</button>
+			<button class="uk-button uk-button-primary" type="submit">Update</button>
 		</form>
 	</div>
 
