--- a/inventory/templates/inventory/login.html
+++ b/inventory/templates/inventory/login.html
@@ -9,11 +9,11 @@
 		<form method="POST">
 			{% csrf_token %}
 			<fieldset class="uk-fieldset">
-				<legend class="uk-legend uk-text-bold">Create new ingredient</legend>
+				<legend class="uk-legend uk-text-bold">User sign up</legend>
 				{{ form.as_p }}
 			</fieldset>
-			<button class="uk-button uk-button-primary" type="submit">Add</button>
-		</form>
+			<button class="uk-button uk-button-primary" type="submit">Sign in</button>
+		</form>		
 	</div>
 
 	<div class="uk-width-1-6@m uk-invisible"></div>
