--- a/inventory/templates/inventory/login.html
+++ b/inventory/templates/inventory/login.html
@@ -9,7 +9,7 @@
 		<form method="POST">
 			{% csrf_token %}
 			<fieldset class="uk-fieldset">
-				<legend class="uk-legend uk-text-bold">User sign up</legend>
+				<legend class="uk-legend uk-text-bold">User sign in</legend>
 				{{ form.as_p }}
 			</fieldset>
 			<button class="uk-button uk-button-primary" type="submit">Sign in</button>
